--- a/css/main.css
+++ b/css/main.css
@@ -639,10 +639,9 @@ body {
 /* .footer;; */
 .footer {
   font-family: "Oswald", sans-serif;
-
   display: flex;
   justify-content: center;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 .footer .container {
   display: flex;
@@ -703,7 +702,7 @@ body {
   line-height: 2em;
   margin-bottom: 140px;
 }
-.footer .privacy dt a:hover {
+.footer .privacy a:hover {
   text-decoration: underline;
 }
 .footer .left {
