--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,9 @@ body {
   background: rgba(255, 255, 255, 0.105);
   backdrop-filter: blur(3px);
 }
+.header h1 {
+  font-size: 0;
+}
 .header h1 img {
   height: 67px;
   margin-bottom: 4px;
