--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,11 +70,11 @@
     content: "";
     position: absolute;
     top: 50%;
-    width: 120px;
-    height: 120px;
+    width: 105px;
+    height: 150px;
   }
   .mainArrow .next::before {
-    transform: translateX(-40px);
+    transform: translateX(15px);
   }
   .mainArrow .prev::after,
   .mainArrow .next::after {
@@ -86,11 +86,17 @@
     border-top: 1px solid #fff;
     border-right: 1px solid #fff;
   }
+  .mainArrow .prev {
+    left: 0px;
+  }
+  .mainArrow .next {
+    right: 0px;
+  }
   .mainArrow .prev::after {
     transform: translateX(50%) rotate(-135deg);
   }
   .mainArrow .next::after {
-    transform: translateX(0) rotate(45deg);
+    transform: translateX(45px) rotate(45deg);
   }
   .mainArrow .prev:hover::after {
     border-top: 2px solid #fff;
@@ -100,12 +106,7 @@
     border-top: 2px solid #fff;
     border-right: 2px solid #fff;
   }
-  .mainArrow .prev {
-    left: 0px;
-  }
-  .mainArrow .next {
-    right: -45px;
-  }
+
   .mainArrow .prev:hover {
     background: transparent;
     opacity: 1;
