--- a/css/responsive.css
+++ b/css/responsive.css
@@ -203,7 +203,7 @@
     position: absolute;
     top: 10%;
     left: 50%;
-    padding: 20px 15px 20px 15px;
+    padding: 10px 15px 10px 15px;
     transform: translateX(-50%);
     width: 100%;
     background: #111;
@@ -217,8 +217,9 @@
   }
   .description .closeBtn {
     position: absolute;
-    top: -30px;
-    left: 45%;
+    top: 0%;
+    right: 50%;
+    transform: translateX(50%);
   }
   .description .closeBtn i {
     font-size: 40px;
@@ -243,6 +244,7 @@
 
   .infoSlideBtn .prev,
   .infoSlideBtn .next {
+    display: none;
     position: absolute;
     width: 100px;
     height: 100px;
