--- a/css/responsive.css
+++ b/css/responsive.css
@@ -201,7 +201,7 @@
   .description .info {
     display: none;
     position: absolute;
-    top: 10%;
+    top: 3%;
     left: 50%;
     padding: 10px 15px 10px 15px;
     transform: translateX(-50%);
@@ -217,8 +217,10 @@
   }
   .description .closeBtn {
     position: absolute;
-    top: -6%;
+    top: 101%;
     right: 50%;
+    border: 1px solid #fff;
+    border-radius: 50%;
     transform: translateX(50%);
   }
   .description .closeBtn i {
