--- a/css/main.css
+++ b/css/main.css
@@ -743,9 +743,10 @@ body {
   width: 75%;
   font-size: 19px;
   font-weight: 300;
-  color: #000;
+  color: #fff;
   border-radius: 3px;
-  background: #fff;
+  background: #111111;
+  border: 1px solid #fff;
   margin-bottom: 60px;
 }
 .footer .twitterBox {
