--- a/css/responsive.css
+++ b/css/responsive.css
@@ -234,7 +234,8 @@
     text-shadow: 0 0 1px #000;
   }
   .description .closeBtn i:hover {
-    transform: rotate(10deg) scale(1.55);
+    transform: rotate(0deg);
+    background: rgba(255, 255, 255, 0.327);
   }
   /* 22.07.24 description move btn */
   .infoSlideBtn {
