--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-.Wrap {
-  overflow-x: hidden;
-}
-
 body {
   background: #111;
   color: #fff;
@@ -27,20 +23,36 @@ body {
   font-size: 0;
 }
 .header h1 img {
+  position: relative;
   height: 67px;
   margin-bottom: 4px;
+  z-index: 9999;
 }
 .header .gnb {
-  margin: auto 30px;
+  margin: auto 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header .burger i {
+.header .btn i {
   vertical-align: middle;
-  font-size: 40px;
   color: white;
   margin-bottom: 4px;
+}
+.header .btn .burger {
+  font-size: 30px;
+  margin-left: 10px;
+}
+.header .btn .search {
+  font-size: 25px;
+}
+.header .menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 80%;
+  background: rgba(0, 0, 0, 0.9);
 }
 /* 
 .header;;
@@ -349,6 +361,7 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 .promotion .container {
   width: 1230px;
