--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,6 +39,16 @@
     font-size: 30px;
     color: white;
   }
+  .header .menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0;
+    height: 0vh;
+    width: 80%;
+    background: rgba(0, 0, 0, 0.9);
+  }
   /* 
     .header;;
      */
