--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
   z-index: 9999;
 }
 .header .gnb {
-  margin: auto 20px;
+  margin: 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -47,13 +47,19 @@ body {
   font-size: 25px;
 }
 .header .menu {
-  display: none;
   position: absolute;
+  padding-top: 100px;
   top: 0;
-  left: 0;
+  left: 6px;
   height: 100vh;
   width: 80%;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 1);
+}
+.header .topTitle {
+  display: flex;
+}
+.header .bottomImage {
+  display: flex;
 }
 /* 
 .header;;
