--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  line-height: 100px;
   z-index: 999;
 }
 .header:hover {
@@ -20,19 +19,22 @@ body {
   backdrop-filter: blur(3px);
 }
 .header h1 {
+  line-height: 100px;
   font-size: 0;
+  margin-left: 20px;
 }
 .header h1 img {
   position: relative;
   height: 67px;
-  margin-bottom: 4px;
   z-index: 9999;
 }
 .header .gnb {
-  margin: 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.header .btn {
+  margin-right: 20px;
 }
 .header .btn i {
   vertical-align: middle;
@@ -48,18 +50,27 @@ body {
 }
 .header .menu {
   position: absolute;
-  padding-top: 100px;
   top: 0;
-  left: 6px;
+  left: -100%;
+  padding: 100px 0px 0px 30px;
   height: 100vh;
-  width: 80%;
+  width: 90%;
   background: rgba(0, 0, 0, 1);
+  transition: 0.5s;
+  z-index: 999;
+}
+.header .menu.on {
+  left: 0;
 }
 .header .topTitle {
   display: flex;
 }
-.header .bottomImage {
+.header .bottomSlide {
   display: flex;
+}
+.header .sTitle {
+  display: flex;
+  flex-direction: column;
 }
 /* 
 .header;;
@@ -496,8 +507,6 @@ body {
   margin-bottom: 100px;
 }
 .category .tab {
-  position: sticky;
-  top: 0;
   display: flex;
   justify-content: center;
   padding: 15px 0 30px 0;
