--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,7 +13,6 @@
     position: fixed;
     top: 0;
     width: 100%;
-    line-height: 70px;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(3px);
     transition: 0.3s;
@@ -22,12 +21,14 @@
   .header.on {
     top: -70px;
   }
+  .header h1 {
+    line-height: 70px;
+  }
   .header h1 img {
     height: 50px;
     margin-bottom: 0px;
   }
   .header .gnb {
-    margin: 0 10px;
     display: flex;
     justify-content: space-between;
   }
@@ -39,7 +40,6 @@
     font-size: 30px;
     color: white;
   }
-
   /* 
     .header;;
      */
