--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,7 @@
   }
   .header h1 {
     line-height: 70px;
+    margin-left: 10px;
   }
   .header h1 img {
     height: 50px;
@@ -202,7 +203,7 @@
     position: absolute;
     top: 3%;
     left: 50%;
-    padding: 10px 15px 10px 15px;
+    padding: 0px 0px 10px 0px;
     transform: translateX(-50%);
     width: 100%;
     background: #111;
@@ -213,6 +214,9 @@
 
   .description .info.on {
     display: block;
+  }
+  .description .info .text {
+    padding: 0 10px 15px 10px;
   }
   .description .closeBtn {
     position: absolute;
@@ -485,7 +489,7 @@
     border: none;
     border-top: 2px solid #ddd;
     border-left: 2px solid #ddd;
-    z-index: 999;
+    z-index: 998;
   }
   .promotion .slick-arrow:hover {
     border-top: 2px solid #fff;
