--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@ body {
   width: 100%;
   z-index: 999;
 }
-.header:hover {
+/* .header:hover {
   background: rgba(255, 255, 255, 0.105);
   backdrop-filter: blur(3px);
-}
+} */
 .header h1 {
   line-height: 100px;
   font-size: 0;
@@ -34,7 +34,9 @@ body {
   justify-content: space-between;
 }
 .header .btn {
+  position: relative;
   margin-right: 20px;
+  z-index: 999;
 }
 .header .btn i {
   vertical-align: middle;
@@ -54,8 +56,8 @@ body {
   left: -100%;
   padding: 100px 20px 0px 20px;
   height: 100vh;
-  width: 85%;
-  background: rgba(0, 0, 0, 1);
+  width: 100%;
+  background: rgba(0, 0, 0, 0.85);
   transition: 0.5s;
   z-index: 999;
 }
@@ -571,6 +573,8 @@ body {
   font-size: 30px;
   font-weight: 300;
   color: #ddd;
+  border: 1px solid #111;
+
   filter: brightness(0.55);
   transition: 0.3s;
   text-transform: uppercase;
@@ -592,6 +596,8 @@ body {
   position: relative;
   color: #fff;
   filter: brightness(1);
+  border: 1px solid #e61f27;
+  border-radius: 2px;
 }
 .category .tab div::after {
   content: "\e936";
@@ -608,13 +614,10 @@ body {
   color: #fff;
 }
 .category .tab .shooter {
-  background: url(../img/wall01.png) no-repeat center center/cover;
 }
 .category .tab .sports {
-  background: url(../img/wall02.png) no-repeat center center/cover;
 }
 .category .tab .strategy {
-  background: url(../img/paint01.png) no-repeat center center/cover;
 }
 .genre {
   display: none;
