--- a/css/main.css
+++ b/css/main.css
@@ -594,9 +594,11 @@ body {
   margin-bottom: 100px;
 }
 .category .tab {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: center;
-  padding: 15px 0 0px 0;
+  padding: 15px 0 30px 0;
   gap: 30px;
   background: #111;
   z-index: 999;
