--- a/css/responsive.css
+++ b/css/responsive.css
@@ -59,9 +59,12 @@
   .header .topTitle {
     display: flex;
     flex-direction: column;
-    padding-top: 15px;
+    padding-top: 0px;
     font-family: "Oswald", sans-serif;
     font-size: 25px;
+  }
+  .header .topTitle:first-of-type {
+    padding-top: 15px;
   }
   .header .topTitle li {
     flex: 1;
