--- a/css/responsive.css
+++ b/css/responsive.css
@@ -372,7 +372,7 @@
     position: absolute;
     top: 3%;
     left: 50%;
-    padding: 0px 10px 10px 10px;
+    padding: 0px 0 10px 0px;
     transform: translateX(-50%);
     width: 100%;
     background: #111;
