--- a/css/responsive.css
+++ b/css/responsive.css
@@ -120,7 +120,7 @@
     font-size: 15px;
     font-weight: 300;
     line-height: 1.8;
-    letter-spacing: 2px;
+    letter-spacing: px;
   }
   .header .menuInfo a:hover {
     text-decoration: underline;
