--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,7 +61,7 @@
     flex-direction: column;
     padding-top: 0px;
     font-family: "Oswald", sans-serif;
-    font-size: 20px;
+    font-size: 19px;
   }
   .header .topTitle:first-of-type {
     padding-top: 15px;
@@ -95,8 +95,8 @@
   .header .topTitle a {
     position: relative;
     padding-left: 13px;
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 13px;
+    font-weight: 400;
     line-height: 1;
   }
   .header .topTitle a:hover {
@@ -117,7 +117,7 @@
     flex-direction: column;
     bottom: 10%;
     display: block;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 300;
     line-height: 1.8;
     letter-spacing: px;
@@ -129,8 +129,8 @@
     content: "";
     width: 150%;
     height: 1px;
-    margin-bottom: 20px;
-    background: #ddd;
+    margin-bottom: 10px;
+    background: rgb(141, 141, 141);
   }
   .header .login {
     padding-top: 10px;
